[package]
name = "tipping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tipping"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.12.0"
petgraph = "0.6.4"
pyo3 = "0.19.0"
rayon = "1.8.0"
regex = "1.10.2"
