[package]
name = "tipping-rs"
version = "0.2.0"
edition = "2021"
authors = ["Shayan Hashemi <shshemi@gmail.com>"]
keywords = ["log-parsing", "log-clustering", "log", "parsing", "tipping"]
repository = "https://github.com/shshemi/tipping-rs"
readme = "README.md"
description = "A Rust implementation of Token Interdependency Parsing (Tipping) algorithm"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.13.0"
hashbrown = "0.14.3"
itertools = "0.12.0"
petgraph = "0.6.4"
rayon = "1.8.1"

[dev-dependencies]
float-cmp = "0.9.0"
